--- a/app/src/main/res/layout/activity_authentification.xml
+++ b/app/src/main/res/layout/activity_authentification.xml
@@ -59,6 +59,12 @@
         android:orientation="vertical"
         android:gravity="center"
         android:visibility="gone">
+        <Spinner
+            android:id="@+id/spinnerRole"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="12dp"
+            android:textSize="16sp"/>
 
         <EditText
             android:id="@+id/nomEditText"
