--- a/app/src/main/res/layout/activity_offre.xml
+++ b/app/src/main/res/layout/activity_offre.xml
@@ -22,6 +22,23 @@
         android:padding="10dp"
         android:layout_marginTop="10dp"/>
 
+    <!-- Bouton pour choisir une image -->
+    <Button
+        android:id="@+id/btnChoisirImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Choisir une image"
+        android:layout_marginTop="10dp"/>
+
+    <!-- Aperçu de l'image sélectionnée -->
+    <ImageView
+        android:id="@+id/imgPreview"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="centerCrop"/>
+
+    <!-- Bouton pour ajouter l'offre -->
     <Button
         android:id="@+id/btnAjouter"
         android:layout_width="match_parent"
